--- a/index.html
+++ b/index.html
@@ -14,31 +14,31 @@
         <h1>Flight Search</h1>
         <form id="flight-search-form" class="mb-4">
             <div class="mb-3">
-                <label for="origins" class="form-label">Origins</label>
+                <label for="origins" class="form-label">List of origins</label>
                 <select id="origins" class="form-select" multiple required></select>
             </div>
             <div class="mb-3">
-                <label for="destinations" class="form-label">Destinations</label>
+                <label for="destinations" class="form-label">List of destinations</label>
                 <select id="destinations" class="form-select" multiple required></select>
             </div>
             <div class="mb-3">
-                <label for="departure-from" class="form-label">Departure From</label>
+                <label for="departure-from" class="form-label">Departure date from</label>
                 <input type="text" id="departure-from" class="form-control" required>
             </div>
             <div class="mb-3">
-                <label for="departure-to" class="form-label">Departure To</label>
+                <label for="departure-to" class="form-label">Departure date to</label>
                 <input type="text" id="departure-to" class="form-control" required>
             </div>
             <div class="mb-3">
-                <label for="layover-from" class="form-label">Layover From (hours, optional)</label>
-                <input type="number" id="layover-from" class="form-control" min="0" step="0.1">
+                <label for="layover-from" class="form-label">Layover Min (pick hours 0 - 12)</label>
+                <input type="number" id="layover-from" class="form-control" min="0" max="12" step="1" required>
             </div>
             <div class="mb-3">
-                <label for="layover-to" class="form-label">Layover To (hours, optional)</label>
-                <input type="number" id="layover-to" class="form-control" min="0" step="0.1">
+                <label for="layover-to" class="form-label">Layover Max (pick hours 0 - 12)</label>
+                <input type="number" id="layover-to" class="form-control" min="0" max="12" step="1" required>
             </div>
             <div class="mb-3">
-                <label for="time-format" class="form-label">Time Format</label>
+                <label for="time-format" class="form-label">Outut Times Format</label>
                 <select id="time-format" class="form-select">
                     <option value="LOCAL">Local</option>
                     <option value="UTC">UTC</option>
