added swap between origin and dest

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 <label for="origins" class="form-label">List of origins</label>
                 <select id="origins" class="form-select" multiple required></select>
             </div>
+            <div class="mb-3 text-center">
+                <button type="button" id="swap-btn" class="btn btn-secondary">Swap</button>
+            </div>
             <div class="mb-3">
                 <label for="destinations" class="form-label">List of destinations</label>
                 <select id="destinations" class="form-select" multiple required></select>
