Updated form. Added tiles for mobile devices instead of table view

--- a/index.html
+++ b/index.html
@@ -8,17 +8,232 @@
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" rel="stylesheet" />
     <link href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap5.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
+    <style>
+        /* Form container */
+        .flight-form {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+        }
+        /* Form labels */
+        .flight-form .form-label {
+            font-size: 14px;
+            font-weight: 500;
+            color: #333;
+            margin-bottom: 4px;
+            display: block; /* Ensure label stays above */
+        }
+        /* Form inputs */
+        .flight-form .form-control,
+        .flight-form .form-select {
+            border-radius: 6px;
+            border: 1px solid #ced4da;
+            padding: 8px 12px;
+            font-size: 14px;
+            height: 40px;
+            width: 100%;
+            display: block; /* Ensure block layout */
+        }
+        /* Select2 container */
+        .flight-form .select2-container {
+            width: 100% !important; /* Force full width */
+            display: block !important; /* Ensure block layout */
+        }
+        .flight-form .select2-selection--multiple {
+            border-radius: 6px;
+            border: 1px solid #ced4da;
+            padding: 4px 8px;
+            font-size: 14px;
+            min-height: 40px;
+            width: 100%;
+            box-sizing: border-box;
+        }
+        /* Compact spacing */
+        .flight-form .mb-3 {
+            margin-bottom: 12px !important;
+        }
+        /* Swap button */
+        .swap-btn {
+            background-color: #f8f9fa;
+            border: 1px solid #ced4da;
+            border-radius: 50%;
+            width: 36px;
+            height: 36px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0;
+            cursor: pointer;
+            transition: background-color 0.2s;
+            margin: 0 auto; /* Center the button */
+        }
+        .swap-btn:hover {
+            background-color: #e9ecef;
+        }
+        .swap-btn i {
+            font-size: 16px;
+            color: #007bff;
+        }
+        /* Submit button */
+        .flight-form .btn-primary {
+            background-color: #007bff;
+            border: none;
+            border-radius: 6px;
+            padding: 10px 20px;
+            font-size: 14px;
+            font-weight: 500;
+            transition: background-color 0.2s;
+        }
+        .flight-form .btn-primary:hover {
+            background-color: #0056b3;
+        }
+
+        @media (max-width: 768px) {
+            #controls {
+                display: none;
+            }
+            #flights-table {
+                display: none;
+            }
+            #tiles-container {
+                display: block;
+            }
+
+            /* Hide DataTable paginator and search bar */
+            .dataTables_paginate { display: none; }
+            .dataTables_filter { display: none; }
+            .dataTables_info { display: none; } /* Optional: hides "Showing 1 to 10 of X entries" */
+            .dataTables_length { display: none; }
+        }
+    
+        @media (min-width: 769px) {
+            #flights-table {
+                display: table;
+            }
+            #tiles-container {
+                display: none;
+            }
+
+            .dataTables_paginate { display: block; }
+            .dataTables_filter { display: block; }
+            .dataTables_info { display: block; }
+            .dataTables_length { display: block; }
+        }
+
+        /* DataTable adjustments */
+        .dataTables_wrapper {
+            width: 100% !important;
+            display: block !important;
+        }
+    
+        #flights-table {
+            width: 100% !important;
+            table-layout: auto !important;
+        }
+        /* Ensure table and its elements scale with zoom */
+        #flights-table thead th,
+        #flights-table tbody td {
+            box-sizing: border-box;
+        }
+
+        /* Tile design */
+        .tile {
+            background-color: #fff;
+            border: 1px solid #e0e0e0;
+            border-radius: 8px;
+            padding: 12px;
+            margin-bottom: 12px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+            font-family: Arial, sans-serif;
+            position: relative;
+        }
+        .tile-header {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 10px;
+        }
+        .tile-header .date {
+            font-size: 14px;
+            color: #666;
+        }
+        .tile-header .duration {
+            font-size: 14px;
+            color: #666;    
+        }
+        .timeline {
+            position: relative;
+            padding-left: 30px;
+        }
+        .timeline::before {
+            content: '';
+            position: absolute;
+            left: 15px;
+            top: 0;
+            bottom: 0;
+            width: 2px;
+            background: #e0e0e0;
+        }
+        .timeline-point {
+            position: relative;
+            margin-bottom: 10px;
+        }
+        .timeline-point::before {
+            content: '';
+            position: absolute;
+            left: -30px;
+            top: 5px;
+            width: 10px;
+            height: 10px;
+            background: #e0e0e0;
+            border-radius: 50%;
+        }
+        /*.timeline-point.flight::after {
+            content: '✈️';
+            position: absolute;
+            left: -28px;
+            top: 20px;
+            font-size: 14px;
+        }*/
+        .timeline-point .time {
+            font-size: 16px;
+            font-weight: bold;
+            color: #000;
+            margin: 0;
+        }
+        .timeline-point .airport {
+            font-size: 14px;
+            color: #333;
+            margin: 0;
+        }
+        .timeline-point .duration {
+            font-size: 12px;
+            color: #666;
+            margin: 0;
+        }
+        .stopover {
+            border-top: 1px solid #e0e0e0;
+            padding: 8px 0;
+            margin: 8px 0;
+            font-size: 12px;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
     <div class="container mt-4">
         <h1>Flight Search</h1>
-        <form id="flight-search-form" class="mb-4">
+        <form id="flight-search-form" class="flight-form">
             <div class="mb-3">
                 <label for="origins" class="form-label">List of origins</label>
                 <select id="origins" class="form-select" multiple required></select>
             </div>
             <div class="mb-3 text-center">
-                <button type="button" id="swap-btn" class="btn btn-secondary">Swap</button>
+                <button type="button" id="swap-btn" class="swap-btn">
+                    <i class="bi bi-arrow-left-right"></i>
+                </button>
             </div>
             <div class="mb-3">
                 <label for="destinations" class="form-label">List of destinations</label>
@@ -41,7 +256,7 @@
                 <input type="number" id="layover-to" class="form-control" min="0" max="12" step="1" required>
             </div>
             <div class="mb-3">
-                <label for="time-format" class="form-label">Outut Times Format</label>
+                <label for="time-format" class="form-label">Output Times Format</label>
                 <select id="time-format" class="form-select">
                     <option value="LOCAL">Local</option>
                     <option value="UTC">UTC</option>
@@ -57,6 +272,7 @@
             </div>
         </div>
         <table id="flights-table" class="table table-striped"></table>
+        <div id="tiles-container"></div> <!-- Container for tiles on small screens -->
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
