--- a/index.html
+++ b/index.html
@@ -128,7 +128,13 @@
             #flights-table {
                 display: none;
             }
+            #flights-table-return {
+                display: none;
+            }
             #tiles-container {
+                display: block;
+            }
+            #tiles-container-return {
                 display: block;
             }
 
@@ -214,9 +220,15 @@
             #tiles-container .tile {
                 margin-bottom: 20px; /* Add spacing between tiles */
             }
+            #tiles-container-return .tile {
+                margin-bottom: 20px; /* Add spacing between tiles */
+            }
             /* 1 tile per row (769px to 991px) */
             @media (min-width: 769px) and (max-width: 991px) {
                 #tiles-container .tile {
+                    width: 100%; /* Full width for 1 tile per row */
+                }
+                #tiles-container-return .tile {
                     width: 100%; /* Full width for 1 tile per row */
                 }
             }
@@ -225,10 +237,16 @@
                 #tiles-container .tile {
                     width: calc(50% - 10px); /* 2 tiles per row with gap */
                 }
+                #tiles-container-return .tile {
+                    width: calc(50% - 10px); /* 2 tiles per row with gap */
+                }
             }
             /* 3 tiles per row (1200px and above) */
             @media (min-width: 1200px) {
                 #tiles-container .tile {
+                    width: calc(33.333% - 13.333px); /* 3 tiles per row with gap */
+                }
+                #tiles-container-return .tile {
                     width: calc(33.333% - 13.333px); /* 3 tiles per row with gap */
                 }
             }
@@ -238,9 +256,17 @@
             #tiles-container .tile {
                 width: 100%; /* Full width for mobile */
             }
+            #tiles-container-return .tile {
+                width: 100%; /* Full width for mobile */
+            }
         }
         /* Ensure tiles container uses flex for wrapping */
         #tiles-container {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px; /* Space between tiles */
+        }
+        #tiles-container-return {
             display: flex;
             flex-wrap: wrap;
             gap: 20px; /* Space between tiles */
@@ -376,6 +402,34 @@
                 </div>
             </div>
             <div class="mb-3">
+                <label class="form-label">Trip type</label>
+                <div class="d-flex gap-3">
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="trip-type" id="trip-oneway" value="oneway" checked>
+                        <label class="form-check-label" for="trip-oneway">One-way</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="trip-type" id="trip-return" value="return">
+                        <label class="form-check-label" for="trip-return">Return</label>
+                    </div>
+                </div>
+            </div>
+            <div class="mb-3 d-none" id="return-range">
+                <label class="form-label">Return flight departure range (from - to)</label>
+                <div class="field-group">
+                    <div class="form-group">
+                        <input type="text" id="return-from" class="form-control">
+                    </div>
+
+                    <div class="form-group">
+                        <input type="text" id="return-to" class="form-control">
+                    </div>
+                </div>
+                <div id="return-error" class="text-danger small mt-2 d-none">
+                    Return dates are required and must be on/after the departure dates.
+                </div>
+            </div>
+            <div class="mb-3">
                 <button type="button" class="btn btn-outline-secondary d-inline-flex align-items-center gap-2" id="advanced-toggle" data-bs-toggle="collapse" data-bs-target="#advanced-fields" aria-expanded="false" aria-controls="advanced-fields">
                     <i class="bi bi-plus-lg" id="advanced-toggle-icon"></i>
                     <span>Advanced</span>
@@ -426,8 +480,15 @@
             <label for="direct-flights-only">Show direct flights only</label>
         </div>
         
+        <h3 id="outbound-title" class="mt-3"></h3>
         <table id="flights-table" class="table table-striped"></table>
         <div id="tiles-container"></div> <!-- Container for tiles on small screens -->
+
+        <div id="return-results" class="d-none">
+            <h3 id="return-title" class="mt-4"></h3>
+            <table id="flights-table-return" class="table table-striped"></table>
+            <div id="tiles-container-return"></div>
+        </div>
     </div>
 
     
